# flash-attention

./: .gitignore
csrc/: CMakeLists.txt
csrc/flashmask_v2/: flash_api.cu  flash_bwd_launch_template.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  flash_prepare_scheduler.cu  flashmaskv2.map  mainloop_bwd_sm90_tma_gmma_ws.hpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  tile_size.h
csrc/flashmask_v2/distributed/: CMakeLists.txt  ag_semaphore_ops.cuh  cp_heuristic.cuh  debug_logger.cuh  dk_dv_reduce_bf16.cuh  hierarchical_rank_map.cuh  layout_transpose.cuh  nvshmem_copy_utils.cuh  overlap_comm.cu  overlap_comm.cuh  overlap_feature_flags.cuh  remote_get_kernel.cuh  remote_put_kernel.cuh  rs_semaphore_ops.cuh  sep_sr_buffer.cu  sep_sr_buffer.cuh  sr_buffer.cuh
csrc/flashmask_v2/distributed/cmake/: nvshmem.cmake  nvshmem_cuda13.patch
flashmask/: setup.py
flashmask/flash_mask/: __init__.py  interface.py
flashmask/flash_mask/cp_balance/: .gitignore  __init__.py  cp_balance.py  cp_balance_cuda_kernels.py
flashmask/flash_mask/cute/: blackwell_helpers.py  block_info.py  block_sparse_utils.py  block_sparsity.py  cache_utils.py  compute_block_sparsity.py  copy_utils.py  cute_dsl_utils.py  flash_bwd.py  flash_bwd_postprocess.py  flash_bwd_preprocess.py  flash_bwd_sink.py  flash_bwd_sm100.py  flash_bwd_sm90.py  flash_fwd.py  flash_fwd_combine.py  flash_fwd_sm100.py  flash_fwd_sm90.py  hopper_helpers.py  interface.py  layout_utils.py  mask.py  pack_gqa.py  paged_kv.py  pipeline.py  seqlen_info.py  softmax.py  tile_scheduler.py  utils.py
flashmask/flash_mask/flash_attn_v4/: __init__.py  ampere_helpers.py  barrier.py  blackwell_helpers.py  block_info.py  block_sparse_utils.py  block_sparsity.py  cache_utils.py  copy_utils.py  cute_dsl_ptxas.py  cute_dsl_utils.py  fa_logging.py  log  (+33 more)
(+75 files in other folders)
